# sorting_bot

./: CMakeLists.txt  LICENSE  README.md  dependencies.repos  package.xml
config/: base_camera_info.yaml  camera_info.yaml  detection_simulator_params.yaml  hand_camera_info.yaml  joint_trajectory_publisher_lekiwi_params.yaml  joint_trajectory_publisher_params.yaml  param_base_camera.yaml  param_camera.yaml  param_hand_camera.yaml  tags_36h11.yaml  tags_box.yaml  tags_objects.yaml
include/sorting_bot/: data_structures.hpp  detection_simulator.hpp  genetic_algo_inv_kin.hpp  genetic_algo_inverse_kin.hpp  inverse_kin.hpp  inverse_kin_base.hpp  joint_trajectory_publisher.hpp  motion_planner.hpp  planner_manager.hpp  quintic_polynom.hpp  ros_msg_conversions.hpp
include/sorting_bot/inverse_kin/: genetic_algo_inverse_kin.hpp  inverse_kin.hpp  inverse_kin_base.hpp
launch/: apriltag_detection.launch.py  detection_simulator.launch.py  joint_trajectory_publisher.launch.py  trajectory_publisher.launch.py
src/: detection_simulator.cpp  detection_simulator.yaml  genetic_algo_inverse_kin.cpp  inverse_kin.cpp  inverse_kin_base.cpp  joint_trajectory_publisher.cpp  joint_trajectory_publisher.yaml  motion_planner.cpp  planner_manager.cpp  quintic_polynom.cpp  trajectory_publisher.cpp
src/inverse_kin/: genetic_algo_inverse_kin.cpp  inverse_kin.cpp  inverse_kin_base.cpp
