<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sorting_bot</name>
  <version>0.0.1</version>
  <description>Project to do selective sort with open source robots.</description>
  <maintainer email="theo.martinezf@gmail.com">Théo Martinez</maintainer>
  <license>BSD 3-Clause License</license>


  <!-- ROS dependencies. -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>usb_cam</depend>
  <depend>pinocchio</depend>
  <depend>ros2_controllers</depend>
  <depend>gz_ros2_control</depend>
  <depend>generate_parameter_library</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>